src/snapshots/afrotd__parser__tests__interpreation_html_3.1.3_4.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.1.3.IV
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A versucht ein Fieldgoal. Der Kick wird abgeblockt und
            überquert nicht die neutrale Zone. Team A recovert den Ball und
            wird jenseits der Line to Gain getackelt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A behält den Ball, um seine Ballbesitz-Serie fortzusetzen.
                First Down und 10.
            </p>
        </details>
    </div>
</article>
