src/snapshots/afrotd__parser__tests__interpreation_html_3.1.3_6.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.1.3.VI
        </p>
    </div>
    <div class="message-body">
        <p>
            Während der ersten Ballbesitz-Serie einer Extraperiode verliert
            Team B, nachdem es in Ballbesitz gekommen war, den Ballbesitz an
            Team A. Team A (a) erzielt einen Touchdown; (b) erzielt keine
            Punkte.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) Die Punkte zählen. In (a) und (b) ist Team A’s
                BallbesitzSerie vorüber und Team B beginnt seine
                Ballbesitz-Serie.
            </p>
        </details>
    </div>
</article>
