src/snapshots/afrotd__parser__tests__interpreation_html_3.1.3_7.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.1.3.VII
        </p>
    </div>
    <div class="message-body">
        <p>
            Während der ersten Ballbesitz-Serie in einer Extraperiode fumbelt
            Team A beim zweiten Down und der Ball rollt in Team B’s Endzone.
            Team B recovert den Ball und bleibt in seiner Endzone.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A’s Ballbesitz-Serie ist vorüber. Team B’s
                Ballbesitz-Serie beginnt.
            </p>
        </details>
    </div>
</article>
