src/snapshots/afrotd__parser__tests__interpreation_html_3.1.3_9.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.1.3.IX
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A’s Fieldgoalversuch ist jenseits der neutralen Zone
            unberührt, bis B17 den Ball an der B-5 berührt. A75 recovert den
            Ball an der B-3.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A’s Ballbesitz-Serie wird fortgesetzt. First Down für Team
                A an der B-3.
            </p>
        </details>
    </div>
</article>
