src/snapshots/afrotd__parser__tests__interpreation_html_3.2.3_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.2.3.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Während eines Free Kicks durch Team A läuft die Spielzeit am Ende
            der zweiten Spielperiode aus. Team A begeht ein Offside beim Kick.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Strafe – 5 Meter vom Previous Spot, dem Ende von Team B’s Lauf
                oder dem Punkt des Touchbacks, und die Periode wird verlängert.
                Der Free Kick wird wiederholt oder Team B erhält einen Down
                ohne Zeit.
            </p>
        </details>
    </div>
</article>
