src/snapshots/afrotd__parser__tests__interpreation_html_3.2.3_6.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.2.3.VI
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A erzielt während eines Downs, in dem die Spielzeit ausläuft,
            einen Touchdown. Während Team A’s erfolgreichen Try foult Team B.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Die Periode wird nicht für einen Kickoff verlängert. Team A
                kann die Strafe annehmen und den Try wiederholen oder die
                Strafe ablehnen und die Punkte akzeptieren. Strafen für
                persönliche Fouls und Unsportliche Verhalten Fouls können bei
                einem anschließenden Kickoff oder vom Succeeding Spot in
                Extraperioden geahndet werden.
            </p>
        </details>
    </div>
</article>
