src/snapshots/afrotd__parser__tests__interpreation_html_3.2.3_7.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.2.3.VII
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A erzielt während eines Downs, in dem die Spielzeit ausläuft,
            einen Touchdown. Nachdem der Try endet, verursacht eines der Teams
            ein Dead Ball Foul.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der Try kann aufgrund eines Live Ball Fouls während des Try
                wiederholt werden. Die Strafe für das Dead Ball Foul muss dann
                ebenfalls bei der Wiederholung des Try geahndet werden. Die
                Periode wird nicht verlängert, um die Strafe für das Dead Ball
                Foul zu ahnden. Wird die Strafe angenommen, muss sie beim
                Kickoff, mit dem die nächste Periode beginnt, oder vom
                Succeeding Spot in Extraperioden durchgeführt werden.
            </p>
        </details>
    </div>
</article>
