src/snapshots/afrotd__parser__tests__interpreation_html_3.2.4_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 3.2.4.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Nachdem der Ball nach einem Laufspiel in einer Seitenzone dead
            wurde, haben die Schiedsrichter Schwierigkeiten, den Ball zu den
            Hash Marks zu bringen. Als die Play Clock weniger als „25“ anzeigt,
            legt der Umpire den Ball auf den Boden und geht zur Seite.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Ohne die Game Clock anzuhalten, zeigt der Referee durch ein
                Pumpsignal an, dass die Play Clock auf „25“ gesetzt wird. Kann
                die Play Clock schnell auf „25“ gesetzt werden, wird die Game
                Clock nicht angehalten. Nur wenn der Bediener der Play Clock
                nicht schnell genug auf das Signal des Referees reagiert, nimmt
                der Referee ein Timeout, zeigt an, dass die Play Clock auf „25“
                gestellt werden soll und startet danach beide Uhren.
            </p>
        </details>
    </div>
</article>
